Added IndoorAtlas Support

--- a/SDKv3_Examples/app/build.gradle
+++ b/SDKv3_Examples/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.mappedin.sdkv3_examples"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -48,4 +48,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.indooratlas.android:indooratlas-android-sdk:3.1.0@aar'
+}
+
+repositories{
+    maven {
+        url "http://indooratlas-ltd.bintray.com/mvn-public"
+    }
 }
