--- a/SDKv3_Examples/app/src/main/AndroidManifest.xml
+++ b/SDKv3_Examples/app/src/main/AndroidManifest.xml
@@ -2,9 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mappedin.sdkv3_examples">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-feature android:name="android.hardware.location.gps" />
+    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
+    <uses-feature android:name="android.hardware.sensor.compass"  android:required="true" />
+    <uses-feature android:name="android.hardware.sensor.gyroscope"  android:required="true" />
+    <uses-feature android:name="android.hardware.wifi" android:required="true" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.indooratlas.android.sdk.API_KEY"
+            android:value="07d631f7-c82e-43d9-9d3c-48cf8bdec9a7"/>
+        <meta-data
+            android:name="com.indooratlas.android.sdk.API_SECRET"
+            android:value="f3jjSUWT+48snYeVprpgXnM7iT6iIierZw/MgiCoFRssicEL5uPC//PBVuGrf/DeSKiNWI82Zxb/lu0Gfs+sxdZBLvgL6XsKqnfvyuy297k0S/HgkDhINjQhL/I/EA=="/>
     </application>
 
 </manifest>
